VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc3Up.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [64MB/2.258GB][  2%][=>                                                ][21.33MB/s]  [128MB/2.258GB][  5%][==>                                               ][32MB/s]  [192MB/2.258GB][  8%][====>                                             ][38.4MB/s]  [256MB/2.258GB][ 11%][=====>                                            ][42.67MB/s]  [312MB/2.258GB][ 13%][======>                                           ][44.57MB/s]  [376MB/2.258GB][ 16%][========>                                         ][47MB/s]  [440MB/2.258GB][ 19%][=========>                                        ][48.89MB/s]  [504MB/2.258GB][ 21%][==========>                                       ][50.4MB/s]  [568MB/2.258GB][ 24%][============>                                     ][51.64MB/s]  [624MB/2.258GB][ 26%][=============>                                    ][52MB/s]  [688MB/2.258GB][ 29%][==============>                                   ][52.92MB/s]  [752MB/2.258GB][ 32%][================>                                 ][53.71MB/s]  [816MB/2.258GB][ 35%][=================>                                ][54.4MB/s]  [872MB/2.258GB][ 37%][==================>                               ][54.5MB/s]  [936MB/2.258GB][ 40%][====================>                             ][55.06MB/s]  [1000MB/2.258GB][ 43%][=====================>                            ][55.56MB/s]  [1.039GB/2.258GB][ 46%][=======================>                          ][56MB/s]  [1.094GB/2.258GB][ 48%][========================>                         ][56MB/s]  [1.156GB/2.258GB][ 51%][=========================>                        ][56.38MB/s]  [1.219GB/2.258GB][ 53%][==========================>                       ][56.73MB/s]  [1.281GB/2.258GB][ 56%][============================>                     ][57.04MB/s]  [1.344GB/2.258GB][ 59%][=============================>                    ][57.33MB/s]  [1.406GB/2.258GB][ 62%][===============================>                  ][57.6MB/s]  [1.461GB/2.258GB][ 64%][================================>                 ][57.54MB/s]  [1.516GB/2.258GB][ 67%][=================================>                ][57.48MB/s]  [1.57GB/2.258GB][ 69%][==================================>               ][57.43MB/s]  [1.633GB/2.258GB][ 72%][====================================>             ][57.66MB/s]  [1.688GB/2.258GB][ 74%][=====================================>            ][57.6MB/s]  [1.75GB/2.258GB][ 77%][======================================>           ][57.81MB/s]  [1.812GB/2.258GB][ 80%][========================================>         ][58MB/s]  [1.867GB/2.258GB][ 82%][=========================================>        ][57.94MB/s]  [1.93GB/2.258GB][ 85%][==========================================>       ][58.12MB/s]  [1.984GB/2.258GB][ 87%][===========================================>      ][58.06MB/s]  [2.047GB/2.258GB][ 90%][=============================================>    ][58.22MB/s]  [2.102GB/2.258GB][ 93%][==============================================>   ][58.16MB/s]  [2.164GB/2.258GB][ 95%][===============================================>  ][58.32MB/s]  [2.219GB/2.258GB][ 98%][=================================================>][58.26MB/s]  [2.258GB/2.258GB][100%][==================================================][59.29MB/s]  [2.258GB/2.258GB][100%][==================================================][59.29MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_60848/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_60848/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
